Fix some other weird display issues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="/dist/css/setup.css" />
     <link rel="stylesheet" media="print" href="/dist/css/print.css" />
     <style>
+      html {
+        position: static;
+        width: revert;
+        height: revert;
+      }
       body {
         overflow: initial;
       }
