Update symlink instructions

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!--
       Symlink this dist CSS yourself for local development with:
-      ln -s /path/to/artic.edu/dist/css/app.css /path/to/custom-tours-builder/dist/css/app.css
-      ln -s /path/to/artic.edu/dist/css/app.css.map /path/to/custom-tours-builder/dist/css/app.css.map
-
-      for app, setup and print
+      ln -sv /path/to/artic.edu/public/dist/styles/ dist/styles
     -->
 
-    <link rel="stylesheet" href="/dist/css/setup.css" />
-    <link rel="stylesheet" media="print" href="/dist/css/print.css" />
-    <link rel="stylesheet" href="/dist/css/app.css" />
+    <link rel="stylesheet" href="/dist/styles/setup.css" />
+    <link rel="stylesheet" media="print" href="/dist/styles/print.css" />
+    <link rel="stylesheet" href="/dist/styles/app.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Custom Tour Builder</title>
   </head>
