--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           null,
           React.createElement(CustomToursBuilder, {
             apiSaveEndpoint: "https://artic.edu.ddev.site/api/v1/custom-tours",
+            heroImageId: "3c27b499-af56-f0d5-93b5-a7f2f1ad5813",
           }),
         ),
         document.querySelector("#root"),
