Update local API URL [WEB-2778]

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           React.StrictMode,
           null,
           React.createElement(MyMuseumTourBuilder, {
-            apiSaveEndpoint: "https://artic.edu.ddev.site/api/v1/my-museum-tour",
+            apiSaveEndpoint: "http://www-dev.artic.edu/api/v1/my-museum-tour",
             heroImageId: "3c27b499-af56-f0d5-93b5-a7f2f1ad5813",
           }),
         ),
