Add logic to hide specific artworks from search results [WEB-2804]

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           null,
           React.createElement(MyMuseumTourBuilder, {
             apiSaveEndpoint: "http://www-dev.artic.edu/api/v1/my-museum-tour",
+            hideFromTours: []
           }),
         ),
         document.querySelector("#root"),
